update file paths

--- a/HAN_rating_prediction.ipynb
+++ b/HAN_rating_prediction.ipynb
@@ -16,7 +16,6 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "#import cPickle\n",
     "from collections import defaultdict\n",
     "import re\n",
     "\n",
@@ -83,7 +82,7 @@
     }
    ],
    "source": [
-    "data_train = pd.read_csv('C:/Users/risha/RNN_HAN/amazon_review_data.tsv', sep='\\t')\n",
+    "data_train = pd.read_csv('./amazon_review_data.tsv', sep='\\t')\n",
     "print(data_train.shape)"
    ]
   },
@@ -335,8 +334,8 @@
     }
    ],
    "source": [
-    "## Using already available 100 dimensional word embeddings\n",
-    "GLOVE_DIR = \"C:/Study/Fall17/attention_based_papers\"\n",
+    "## download glove embeddings from https://nlp.stanford.edu/projects/glove/\n",
+    "GLOVE_DIR = \"./\"\n",
     "embeddings_index = {}\n",
     "f = open(os.path.join(GLOVE_DIR, 'glove.6B.100d.txt'), encoding='utf8')\n",
     "for line in f:\n",
@@ -392,9 +391,7 @@
     "\n",
     "    def build(self, input_shape):\n",
     "        assert len(input_shape)==3\n",
-    "        #self.W = self.init((input_shape[-1],1))\n",
     "        self.W = self.init((input_shape[-1],))\n",
-    "        #self.input_spec = [InputSpec(shape=input_shape)]\n",
     "        self.trainable_weights = [self.W]\n",
     "        super(AttLayer, self).build(input_shape)\n",
     "    \n",
@@ -601,12 +598,17 @@
    ],
    "source": [
     "test_data = np.zeros((1, MAX_SENTS, MAX_SENT_LENGTH), dtype='int32')\n",
+    "## sample reviews\n",
+    "\n",
     "## rating = 1\n",
     "#rev = 'Described as &#34;super soft&#34; and &#34;Exceptionally heavy weight&#34;. But what I received looked more like a set of cheap towels coming from a discount store, and looked neither &#34;super soft&#34; nor &#34;Exceptionally heavy weight&#34;. My order came from Warehouse Deals and was packed in a transparent plastic bag, so maybe a mistake was made?Anyway they are being sent back..'\n",
+    "\n",
     "## rating = 4\n",
     "#rev = \"I guess after looking at other reviews that we got lucky  to have great service. Nicole was our server and she first of all informed that the computers were down so orders were going in slowly. Secondly, my wife ordered a lamb burger to be cooked medium and when it came out it was almost raw. Nicole took it back immediately and five minutes later my wife had a perfect lamb burger. On top of that Nicole gave us a free desert because of the burger and the wait.  My burger was great and with service like this who wouldn't come back!\"\n",
+    "\n",
     "## rating = 3\n",
     "#rev = \"We have at least 2 birthday parties to attend here a year. The good part is the fact that the rides are contained in one secluded area so it's easy to keep and eye on the kiddos. The bad part is the cheesy arcade located within. Don't get me wrong I don't mind arcade games, what I detest is the stupid ticket program. You know, the one where the kids collect tickets from the various arcade games then turn them in for a prize? The program here is ridiculous. You have to get and ungodly amount of tickets to get anything, and that \\\"anything\\\" is usually something that can be purchased at the dollar store. The other annoying factor is that the ticket redemption booth is always understaffed and there you are...waiting in a line of indecisive kids so that your child can pick one of the many booby prizes available. It's torture I tell you! If they got rid of this ticket BS I would frequent this place 10 times more. My kids love the go carts and the kiddie roller coaster.\"\n",
+    "\n",
     "## rating = 2\n",
     "rev = \"Excellent service, clean restaurant, absolutely gorgeous wooden Buddah table next to the bar. When I arrived I should have known what to expect when a bus of elderly retirees were leaving. This is not authentic Chinese food. Bad sauces. Too much sugar. No balance of sweet, spicy and salty. I'm really disappointed because I was referred by Check Please Arizona (channel 8). The sauces were terrible in flavor. Proteins were delicious and so were all the veggies. I think I came when chef was having an off night. I'll give them another try.\"\n",
     "revs = []\n",
@@ -813,26 +815,6 @@
    ],
    "source": [
     "list(zip(test_words, weights[0][:count]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 393,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#set(stopwords.words('english')) - set(['against', 'aren', 'below', 'couldn', 'didn', 'doesn', 'down', 'hadn', 'hasn', 'haven', 'isn', 'mustn', 'mightn', 'needn', 'no', 'nor', 'not', 'shouldn', 'under', 'very', 'weren', 'wouldn'])"
    ]
   }
  ],
