--- a/HAN_rating_prediction.ipynb
+++ b/HAN_rating_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -18,6 +18,7 @@
     "import pandas as pd\n",
     "from collections import defaultdict\n",
     "import re\n",
+    "import keras\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
@@ -55,6 +56,28 @@
     "        return K.squeeze(K.dot(x, K.expand_dims(kernel)), axis=-1)\n",
     "    else:\n",
     "        return K.dot(x, kernel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.2.2'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keras.__version__"
    ]
   },
   {
